...
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3">
        <TextView
            android:id="@+id/SetUpText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="Set Up Your Profile"

...
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar3"
            app:layout_constraintTop_toTopOf="@+id/toolbar3" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="First Last Name"
            android:padding="5dp" />
        <TextView
            android:id="@+id/emailField"
...
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar3"
            app:layout_constraintTop_toTopOf="@+id/toolbar3" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="your.email@example.com" />
        <TextView
            android:id="@+id/phoneField"
            android:layout_width="wrap_content"
...
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="(123) 456-7890"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#34C759"

            android:padding="10dp"

...
            />



    </LinearLayout>
    <include
        android:id="@+id/bottomNavigationViewEntrant"
        layout="@layout/entrant_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
...
