...
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_as_guest_button"
            android:layout_width="325dp"
            android:layout_height="63dp"
            android:layout_marginTop="15dp"
            android:padding="12dp"
            android:text="Continue as Guest"
            android:textColor="@color/black"
...
