...
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="Organizer Login"
        android:textColor="#FFFFFF"
        android:textSize="48sp" />
    <EditText
        android:id="@+id/usernameInput"
        android:textColor="#605E5E"
        android:textSize="20sp"
        android:layout_marginLeft="59dp"
        android:layout_marginRight="59dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
...
        android:layout_marginBottom="28dp"
        android:layout_marginHorizontal="59dp"
        android:orientation="vertical">
    </LinearLayout>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_marginLeft="59dp"
        android:layout_marginRight="59dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColorHint="#605E5E"
        android:hint="Password"
...
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:paddingVertical="18dp"
                android:text="Sign in"
                android:textColor="@color/black"
...
